--- a/pretended-blockchain.cabal
+++ b/pretended-blockchain.cabal
@@ -40,17 +40,17 @@ library
   ghc-options:         -Wall
   default-language:    Haskell2010
 
--- test-suite unit-tests
---   type:                exitcode-stdio-1.0
---   main-is:             Spec.hs
---   other-modules:       BlockSpec
---                      , HeaderSpec
---                      , TransactionSpec
---   hs-source-dirs:      tst/unit
---   build-depends:       base
---                      , bytestring
---                      , pretended-blockchain
---                      , hspec
---                      , hspec-discover
---                      , QuickCheck
---   default-language:    Haskell2010
+test-suite unit-tests
+  type:                exitcode-stdio-1.0
+  main-is:             Spec.hs
+  other-modules:       HeaderSpec
+                     -- , BlockSpec
+                     -- , TransactionSpec
+  hs-source-dirs:      tst/unit
+  build-depends:       base
+                     , bytestring
+                     , pretended-blockchain
+                     , hspec
+                     , hspec-discover
+                     , QuickCheck
+  default-language:    Haskell2010
