Adding the block transaction implementation
- Adding the block transaction implementation src.
- Adding the block transaction tst.
- Enabling block transaction test in cabal file.

--- a/pretended-blockchain.cabal
+++ b/pretended-blockchain.cabal
@@ -44,8 +44,8 @@ test-suite unit-tests
   type:                exitcode-stdio-1.0
   main-is:             Spec.hs
   other-modules:       HeaderSpec
+                     , TransactionSpec
                      -- , BlockSpec
-                     -- , TransactionSpec
   hs-source-dirs:      tst/unit
   build-depends:       base
                      , bytestring
