Adding the block implementation
- Adding the block implementation src.
- Adding the block tst.
- Enabling block test in cabal file.

--- a/pretended-blockchain.cabal
+++ b/pretended-blockchain.cabal
@@ -43,9 +43,9 @@ library
 test-suite unit-tests
   type:                exitcode-stdio-1.0
   main-is:             Spec.hs
-  other-modules:       HeaderSpec
+  other-modules:       BlockSpec
+                     , HeaderSpec
                      , TransactionSpec
-                     -- , BlockSpec
   hs-source-dirs:      tst/unit
   build-depends:       base
                      , bytestring
